force-app/main/default/objects/Transaction__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>