force-app/main/default/objects/Transaction__c/fields/Amount_Formula_for_Templates__c.field-meta.xml
<CustomField>
    <fullName>Amount_Formula_for_Templates__c</fullName>
    <formula>Amount_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the formula that will work in templates, since the Amount Formula field errors out, due to the puncutation iin the formula.</inlineHelpText>
    <label>Amount Formula for Templates</label>
    <type>Text</type>
</CustomField>