force-app/main/default/objects/Transaction__c/fields/Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Id__c</fullName>
    <label>Attachment Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>