force-app/main/default/objects/Transaction__c/fields/Attachment_URL__c.field-meta.xml
<CustomField>
    <fullName>Attachment_URL__c</fullName>
    <label>Attachment URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>