force-app/main/default/objects/Transaction__c/fields/Automatically_Send_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Automatically_Send_Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically Send Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>