force-app/main/default/objects/Transaction__c/fields/Basic_Frequency_Description__c.field-meta.xml
<CustomField>
    <fullName>Basic_Frequency_Description__c</fullName>
    <formula>SUBSTITUTE(Recurring_Type__c, &quot;_n_&quot;, &quot; &quot;+Frequency__c+&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic Frequency Description</label>
    <type>Text</type>
</CustomField>