force-app/main/default/objects/Transaction__c/fields/Beneficiary_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Full_Name__c</fullName>
    <formula>Beneficiary__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficiary Full Name</label>
    <type>Text</type>
</CustomField>