force-app/main/default/objects/Transaction__c/fields/Check_Memo_Line__c.field-meta.xml
<CustomField>
    <fullName>Check_Memo_Line__c</fullName>
    <label>Check Memo Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>