force-app/main/default/objects/Transaction__c/fields/Check_Num__c.field-meta.xml
<CustomField>
    <fullName>Check_Num__c</fullName>
    <label>Check Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>