force-app/main/default/objects/Transaction__c/fields/Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Number__c</fullName>
    <formula>TEXT(Check_Num__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Number</label>
    <type>Text</type>
</CustomField>