force-app/main/default/objects/Transaction__c/fields/Conversion_Original_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Original_System_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Conversion Original System ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>