force-app/main/default/objects/Transaction__c/fields/Converted_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Converted_Transaction_ID__c</fullName>
    <label>Converted Transaction ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>