force-app/main/default/objects/Transaction__c/fields/Created_By_Historical__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Historical__c</fullName>
    <label>Created By Historical</label>
    <length>30</length>
    <type>Text</type>
</CustomField>