force-app/main/default/objects/Transaction__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>IF(!ISBLANK(Delivery_Date__c), Delivery_Date__c, 
IF(!ISBLANK(Processed_Date__c),Processed_Date__c,
DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>Date</type>
</CustomField>