force-app/main/default/objects/Transaction__c/fields/Date_Printed__c.field-meta.xml
<CustomField>
    <fullName>Date_Printed__c</fullName>
    <label>Date Printed</label>
    <type>Date</type>
</CustomField>