force-app/main/default/objects/Transaction__c/fields/Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denial_Reason__c</fullName>
    <label>Denial Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Receipts for purchases and services are required</fullName>
            </value>
            <value>
                <fullName>The Disbursement Requests Form must be signed</fullName>
            </value>
            <value>
                <fullName>Paying for this expense would cause loss of government benefits</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>