force-app/main/default/objects/Transaction__c/fields/Disbursement_Letter__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Letter__c</fullName>
    <label>Disbursement Letter</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>