force-app/main/default/objects/Transaction__c/fields/Disbursement_Usage__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Usage__c</fullName>
    <label>Disbursement Usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>