force-app/main/default/objects/Transaction__c/fields/Display_Category__c.field-meta.xml
<CustomField>
    <fullName>Display_Category__c</fullName>
    <label>Display Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>