force-app/main/default/objects/Transaction__c/fields/Distribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Type__c</fullName>
    <label>Distribution Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>