force-app/main/default/objects/Transaction__c/fields/Explanation_2__c.field-meta.xml
<CustomField>
    <fullName>Explanation_2__c</fullName>
    <label>Explanation 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>