force-app/main/default/objects/Transaction__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fax</label>
    <type>Checkbox</type>
</CustomField>