force-app/main/default/objects/Transaction__c/fields/fromRecurring__c.field-meta.xml
<CustomField>
    <fullName>fromRecurring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Recurring</label>
    <type>Checkbox</type>
</CustomField>