force-app/main/default/objects/Transaction__c/fields/Historical_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Historical_Created_By__c</fullName>
    <label>Historical Created By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>