force-app/main/default/objects/Transaction__c/fields/Historical_Delivery_Instrument_Name__c.field-meta.xml
<CustomField>
    <fullName>Historical_Delivery_Instrument_Name__c</fullName>
    <label>Historical Delivery Instrument Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>