force-app/main/default/objects/Transaction__c/fields/Historical_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Historical_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Historical Transaction</label>
    <referenceTo>Historical_Transaction__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>