force-app/main/default/objects/Transaction__c/fields/Historical_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Historical_Transaction_Type__c</fullName>
    <label>Historical Transaction Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>