force-app/main/default/objects/Transaction__c/fields/Lost_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Lost_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lost Receipt</label>
    <type>Checkbox</type>
</CustomField>