force-app/main/default/objects/Transaction__c/fields/Lost_Receipt_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lost_Receipt_Amount__c</fullName>
    <label>Lost Receipt Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>