force-app/main/default/objects/Transaction__c/fields/Medicaid_Type__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Type__c</fullName>
    <label>Medicaid Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>