force-app/main/default/objects/Transaction__c/fields/Month_of_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_of_Date__c</fullName>
    <formula>MONTH(Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month of Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>