force-app/main/default/objects/Transaction__c/fields/Payee_2__c.field-meta.xml
<CustomField>
    <fullName>Payee_2__c</fullName>
    <label>Payee 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>