force-app/main/default/objects/Transaction__c/fields/Payee_Address__c.field-meta.xml
<CustomField>
    <fullName>Payee_Address__c</fullName>
    <formula>IF( ISBLANK(Payee_City__c ), &quot;&quot;, 
 (Payee_Street_1__c &amp; br() &amp;
 IF( ISBLANK(Payee_Street_2__c), &quot;&quot;,  Payee_Street_2__c &amp; br()) &amp; Payee_City__c &amp; &quot;,  &quot; &amp; 
 Payee_State__c &amp; &quot; &quot; &amp; Payee_Zip__c)
 )</formula>
    <label>Payee Address</label>
    <type>Text</type>
</CustomField>