force-app/main/default/objects/Transaction__c/fields/Payee_City__c.field-meta.xml
<CustomField>
    <fullName>Payee_City__c</fullName>
    <label>Payee City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>