force-app/main/default/objects/Transaction__c/fields/Payee_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Payee_City_State_Zip__c</fullName>
    <label>Payee City State Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>