force-app/main/default/objects/Transaction__c/fields/Payee_Description__c.field-meta.xml
<CustomField>
    <fullName>Payee_Description__c</fullName>
    <label>Payee Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>