force-app/main/default/objects/Transaction__c/fields/Payee_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Payee_Disposition__c</fullName>
    <label>Payee Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>