force-app/main/default/objects/Transaction__c/fields/Payee_Memo__c.field-meta.xml
<CustomField>
    <fullName>Payee_Memo__c</fullName>
    <label>Payee Memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>