force-app/main/default/objects/Transaction__c/fields/Payee_PMTID__c.field-meta.xml
<CustomField>
    <fullName>Payee_PMTID__c</fullName>
    <formula>if(ISBLANK(Payee_Name__c), PaymentId__c, Payee_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee/PMTID</label>
    <type>Text</type>
</CustomField>