force-app/main/default/objects/Transaction__c/fields/Payee_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Payee_Special_Instructions__c</fullName>
    <label>Payee Special Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>