force-app/main/default/objects/Transaction__c/fields/Payee_State__c.field-meta.xml
<CustomField>
    <fullName>Payee_State__c</fullName>
    <label>Payee State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>