force-app/main/default/objects/Transaction__c/fields/Payee_Street_1__c.field-meta.xml
<CustomField>
    <fullName>Payee_Street_1__c</fullName>
    <label>Payee Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>