force-app/main/default/objects/Transaction__c/fields/Payee_Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>Payee_Swift_Code__c</fullName>
    <label>Payee Swift Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>