force-app/main/default/objects/Transaction__c/fields/Payee_Zip__c.field-meta.xml
<CustomField>
    <fullName>Payee_Zip__c</fullName>
    <label>Payee Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>