force-app/main/default/objects/Transaction__c/fields/Postage_Code__c.field-meta.xml
<CustomField>
    <fullName>Postage_Code__c</fullName>
    <label>Postage Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>