force-app/main/default/objects/Transaction__c/fields/Postage_Type__c.field-meta.xml
<CustomField>
    <fullName>Postage_Type__c</fullName>
    <label>Postage Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>