force-app/main/default/objects/Transaction__c/fields/Primary_Rep_City__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_City__c</fullName>
    <formula>Trust__r.Primary_Rep_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep City</label>
    <type>Text</type>
</CustomField>