force-app/main/default/objects/Transaction__c/fields/Primary_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Email__c</fullName>
    <formula>Trust__r.Primary_Representative__r.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep Email</label>
    <type>Text</type>
</CustomField>