force-app/main/default/objects/Transaction__c/fields/Primary_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Name__c</fullName>
    <formula>Trust__r.Primary_Representative__r.FirstName + &quot; &quot; + Trust__r.Primary_Representative__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep Name</label>
    <type>Text</type>
</CustomField>