force-app/main/default/objects/Transaction__c/fields/Primary_Rep_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Zip_Code__c</fullName>
    <formula>Trust__r.Primary_Rep_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep Zip Code</label>
    <type>Text</type>
</CustomField>