force-app/main/default/objects/Transaction__c/fields/PVR__c.field-meta.xml
<CustomField>
    <fullName>PVR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PVR</label>
    <type>Checkbox</type>
</CustomField>