force-app/main/default/objects/Transaction__c/fields/Receipts_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Receipts_Outstanding__c</fullName>
    <formula>IF(Up_To_Date__c = TRUE, 0, Amount__c -  Total_of_Receipts__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipts Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>