force-app/main/default/objects/Transaction__c/fields/Recurring_Type__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Type__c</fullName>
    <label>Recurring Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>