force-app/main/default/objects/Transaction__c/fields/Requested_By_Signature__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Signature__c</fullName>
    <label>Requested By Signature</label>
    <length>25</length>
    <type>Text</type>
</CustomField>