force-app/main/default/objects/Transaction__c/fields/Requestor_Description__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Description__c</fullName>
    <label>Requestor Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>