force-app/main/default/objects/Transaction__c/fields/Rollup_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Amount__c</fullName>
    <formula>Case(Status__c , 
&quot;Cancelled&quot;,0,
&quot;Denied&quot;,0,
IF(AND(Status__c = &quot;Approved&quot;, fromRecurring__c  = TRUE),0,
IF(Amount__c &lt;=0, Amount__c, 
Case(TEXT(Type__c),&quot;Deposit&quot;,1,&quot;Disbursement&quot;,-1,1)*Amount__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rollup Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>