force-app/main/default/objects/Transaction__c/fields/Running_Balance__c.field-meta.xml
<CustomField>
    <fullName>Running_Balance__c</fullName>
    <inlineHelpText>Calculates the running balance of all Transactions</inlineHelpText>
    <label>Running Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>