force-app/main/default/objects/Transaction__c/fields/Total_of_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Receipts__c</fullName>
    <inlineHelpText>Calculated using automation when a receipt is uploaded or deleted in a Document Checklist Item record</inlineHelpText>
    <label>Total of Receipts</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>