force-app/main/default/objects/Transaction__c/fields/True_Link_Disbursement_Link__c.field-meta.xml
<CustomField>
    <fullName>True_Link_Disbursement_Link__c</fullName>
    <formula>Hyperlink(&quot;http://member.truelinkfinancial.com/member/organizations/arc-of-texas-x4540358/clients/&quot;&amp; Trust__r.TrueLink_ID__c &amp;&quot;?disbursement_id=&quot;&amp; True_Link_Transaction_ID__c&amp;&quot;#client-disbursements-tab&quot;,&quot;Click to Go to True Link Transaction&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>True Link Disbursement Link</label>
    <type>Text</type>
</CustomField>