force-app/main/default/objects/Transaction__c/fields/True_Link_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>True_Link_Transaction_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>True Link Transaction ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>