force-app/main/default/objects/Transaction__c/fields/Trust_Coordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>Trust_Coordinator_Name__c</fullName>
    <formula>Trust__r.Trust_Coordinator__r.FirstName + &quot; &quot; + Trust__r.Trust_Coordinator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trust Coordinator Name</label>
    <type>Text</type>
</CustomField>