force-app/main/default/objects/Transaction__c/fields/Type_Detail__c.field-meta.xml
<CustomField>
    <fullName>Type_Detail__c</fullName>
    <label>Type Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>