force-app/main/default/objects/Transaction__c/fields/X18_Digit_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Transaction_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Transaction ID</label>
    <type>Text</type>
</CustomField>