force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payee_Name__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Status__c</columns>
    <columns>Processed_Date__c</columns>
    <columns>Cleared_Date__c</columns>
    <columns>Internal_Notes__c</columns>
    <columns>fromRecurring__c</columns>
    <columns>Up_To_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>