force-app/main/default/objects/Transaction__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Display_Category__c</columns>
    <columns>Distribution_Type__c</columns>
    <columns>Payee_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Transaction_Status__c</columns>
    <columns>Rollup_Amount__c</columns>
    <columns>fromRecurring__c</columns>
    <columns>Type__c</columns>
    <columns>Type_Detail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>