force-app/main/default/objects/Transaction__c/listViews/All_Disbursements_yesterday.listView-meta.xml
<ListView>
    <fullName>All_Disbursements_yesterday</fullName>
    <columns>NAME</columns>
    <columns>Trust__c</columns>
    <columns>Date__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Payee_Name__c</columns>
    <columns>Amount__c</columns>
    <columns>fromRecurring__c</columns>
    <columns>Status__c</columns>
    <columns>Processed_Date__c</columns>
    <columns>Cleared_Date__c</columns>
    <columns>Up_To_Date__c</columns>
    <columns>Internal_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Disbursement</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>All Disbursements - Yesterday</label>
</ListView>